locale update (cs de  el gl he pt-BR sk sr-RS)

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -101,7 +101,7 @@ cs:
   views:
     pagination:
       previous: "Před."
-      next: "Násl."
+      next: "Další"
   warning:
     cant_remove_last_admin: "Jste posledním koordinátorem a nemůžete být odstraněn."
     membership_request_already_approved: "Žádost o členství už byla přijata."
@@ -308,7 +308,6 @@ cs:
   edit_memberships: 'Upravit členství'
   add_new_member: "Přidat nového člena"
   invite_members_to_group: "Pozvat členy do %{which_group}"
-  remaining_invites: "zbývajících pozvánek"
   get_in_touch_link: "spojte se s námi"
   email_members_in_group: "E-mailujte členy %{which_group}"
   subject_error: "Prosím, vyplňte předmět"
@@ -418,7 +417,7 @@ cs:
     restore: "(Obnovit tuto verzi)"
     applying_changes: "(Změny se aplikují...)"
     previous: "Předch."
-    next: "Násl."
+    next: "Další"
   comment_form_placeholder: "Řekněte něco..."
   comment_form_submit_button: "Odeslat komentář"
   liked_by: "To se líbí %{who}"
@@ -480,22 +479,22 @@ cs:
     getting_started: "Jak začít"
     getting_started_description: "Nalevo skupina prodiskutuje téma, vymění si názory a informace. Když nastane čas pro rozhodnutí, rozhodnutí se objeví napravo."
     getting_the_most: 'Získání co nejvíce z Loomio'
-    have_your_say: "Vyjádři svůj názor"
+    have_your_say: "Vyjádřete svůj názor"
     have_a_discussion: "Mějte diskuzi"
     have_a_discussion_description: "Téma a veškeré relevantní související informace se nacházejí v horní části stránky. Pomocí pole pro komentář vneste svůj hlas do diskuze."
     help: "Nápověda"
     how_it_works: "Jak to funguje"
     join_the_community: "Staňte se součástí komunity"
     images_and_text_formatting: "Obrázky a formátování textu"
-    keep_up_to_date: "Zůstaň informován(a)"
+    keep_up_to_date: "Zůstaňte informovánáni"
     make_a_decision: "Rozhodněte se"
     make_a_decision_description: "Když je skupina připravena učinit rozhodnutí, každý může vytvořit návrh. Krátce popište jasný návrh postupu a poskytněte určitý základ, aby každý věděl, co přesně znamená souhlasit či nesouhlasit."
     prompt_people_details: "Pokud chcete získat pozornost konkrétní osoby ve vaší skupině, napište ‚@‘ následované jejich jménem. Obdrží email, který jim dá vědět, že jste je zmínil(a)."
     prompt_people_html: "Pobídněte lidi pomocí <span class='blue'>@zmínění</span>"
-    positions_agree_description: "<span>Souhlasím</span> znamená, že jsi spokojen(a) s návrhem."
-    positions_abstain_description: "<span>Zdržuji se</span> znamená, že si nejste jist(a), nebo že budeš rád(a), když se skupina rozhodne bez tebe."
-    positions_disagree_description: "<span>Nesouhlasím</span> znamená, že myslíš, že by mohla existovat lepší možnost, ale jsi ochotna/ochoten přijmout rozhodnutí skupiny."
-    positions_block_description: "<span>Zamítám</span> znamená, že máte vážné námitky a budete velmi nešťastná/ý, pokud se bude podle návrhu postupovat."
+    positions_agree_description: "<span>Souhlasím</span> znamená, že jste spokojeni s návrhem."
+    positions_abstain_description: "<span>Zdržuji se</span> znamená, že si nejste jisti, nebo že budete rádi, když se skupina rozhodne bez vás."
+    positions_disagree_description: "<span>Nesouhlasím</span> znamená, že myslíte, že by mohla existovat lepší možnost, ale jste ochotni přijmout rozhodnutí skupiny."
+    positions_block_description: "<span>Zamítám</span> znamená, že máte vážné námitky a budete velmi nešťni, pokud se bude podle návrhu postupovat."
     start_discussion: "Zahájení poutavé diskuze"
     start_proposal: "Napsání jasného návrhu"
     video_id: "52025402"
@@ -805,7 +804,7 @@ cs:
   message: "Zpráva"
   name: "Jméno"
   new_activity: "Nová aktivita"
-  next: "Násl."
+  next: "Další"
   other: "Ostatní"
   outcome: "Výsledek"
   password: "Heslo"
