--- a/config/locales/sl.yml
+++ b/config/locales/sl.yml
@@ -2,35 +2,71 @@ sl:
   users:
     email_preferences:
       edit:
-        title: 'E-poštne nastavitve'
-        email_missed_yesterday: "\"Včeraj na Loomio\" - dnevni povzetek vseh zamujenih dejavnosti"
+        title: 'Nastavitve prejemanja e-pošte'
+        when_do_you_want_emails: 'Obvesti me:'
+        email_missed_yesterday: "Včeraj na Loomiu - dnevni povzetek vseh spregledanih dejavnosti"
         email_when_mentioned: "Ko sem @omenjen"
-        email_followed_threads: "Ko je dejavnost v temi katero spremljam."
-        email_when_proposal_closing_soon: "24 ur predno se predlog zaključi."
+        email_followed_threads: "Ob dejavnosti v temi, ki jo spremljam"
+        email_when_proposal_closing_soon: "24 ur pred zaprtjem predloga."
         email_new_discussions_and_proposals: 'Nove razprave in predlogi'
         for_these_groups: "Za te skupine:"
         submit: "Shrani nastavitve"
   explore:
     header: "Razišči javne skupine"
   try_it:
-    start_a_group: "Ustvarite skupino in pričnite sprejemati odločitve v vaši skupnosti"
-    join_the_community: "Pridruži se skupini Loomio Skupnosti"
+    header: "Preizkusi Loomio"
+    start_a_group: "Ustvarite skupino in pričnite sprejemati odločitve v vaši skupnosti."
+    join_the_community: "Pridruži se skupini Loomio skupnosti."
+    loomio_community_info: "Tu razpravljamo in se odločamo glede Loomia."
+    explore_groups: "Razišči druge skupine na Loomiu."
+    explore_groups_info: "Razišči vse mega skupine in se jim pridruži!"
+  activerecord:
+    errors:
+      messages:
+        blank: "polje ne sme ostati prazno"
   errors:
     messages:
-      email: "Neveljaven email naslov"
+      email: "Neveljaven naslov e-pošte"
+  attachment:
+    error:
+      too_large: "Pripeti dokument je večji od 50 MB, izberite manjšega."
+  date:
+    formats:
+      for_another_year: '%-d/%-m/%l'
   devise:
     invitations:
       send_instructions: 'Vabilo je bilo poslano na %{email}.'
+      invitation_token_invalid: 'To vabilo ni več veljavno!'
+      updated: 'Račun je bil ustvarjen.'
+      no_invitations_remaining: "Na voljo nimate več vabil"
+    mailer:
+      invitation_instructions:
+        subject: 'Povabljeni ste bili, da se pridružite skupini na Loomiu'
+    registrations:
+      sign_up: 'Ustvari račun'
   error:
     access_denied: "Nimate dovoljenja za to."
     cant_join_subgroup: "Ne morete se pridružiti podskupini, če niste član nadrejene skupine."
     cant_modify_position: "Ta predlog je zaprt."
     cant_state_position: "Ta predlog je zaprt."
-    cant_view_member_profile: "Nemorete si ogledati profila člana, ker niste v isti skupini."
+    cant_view_member_profile: "Ne morete si ogledati profila člana, ker niste v isti skupini."
+    contribution: "Da bi lahko prispevali, se morate prijaviti."
     discussion_not_created: "Razprave ni bilo mogoče ustvariti."
+    discussion_not_moved: "Nimate dovoljenja, da to razpravo premaknete v %{destination_group.name}"
     group_not_archived: "Skupine ni bilo mogoče arhivirati."
-    invalid_email: "Prosimo vnesite vsaj en veljaven email naslov"
+    invalid_close_date: "Neveljaven končni datum, izberite datum, ki še ni minil."
+    invalid_email: "Prosimo vnesite vsaj en veljaven naslov e-pošte"
+    image_upload_fail: "Slike ni bilo mogoče naložiti. Preverite, če je slika manjša od 1 MB in v formatu .jpeg, .png ali .gif."
+    motion_closing_inputs: "Neveljaven končni datum"
+    motion_outcome_not_created: "Izida ni mogoče objaviti."
+    motion_outcome_not_updated: "Izida ni mogoče posodobiti."
+    only_group_coordinator_destroy: "Skupine ne morete zapustiti, ker ste edini koordinator. Skupino lahko deaktivirate z izbiro s spustnega menija ali <a href='%{add_coordinator}'>dodate novega koordinatorja</a> skupine."
+    only_group_coordinator_remove_admin: "Skupina mora imeti koordinatorja. Želite skupini dodati še enega koordinatorja?"
     permission_to_invite: "Nimate dovoljenja za vabljenje novih članov."
+    position_not_updated: "Stališča ni bilo mogoče posodobiti."
+    settings_not_updated: "Nastavitve niso bile posodobljene."
+    group_request_already_accepted: "To vabilo žal ni več veljavno ali pa je že bilo sprejeto."
+    group_request_invalid_token: "Podatki za dostop so neveljavni."
     user_with_email_address_already_in_group: "Uporabnik s tem email naslovom že pripada tej skupini."
   alert:
     duplicate_email: "%{which_email} je že v skupini."
